third_party/move/move-compiler-v2/tests/checking/typing/v1-operators/boolean_not_non_boolean.exp

Diagnostics:
error: cannot use `integer` with an operator which expects a value of type `bool`
  ┌─ tests/checking/typing/v1-operators/boolean_not_non_boolean.move:3:6
  │
3 │     !0;
  │      ^
